# Capstone_Project_13_Ankit_Kulchandani

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MANAGEMENT_DEMO.md  PPT_STYLE_DEMO.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_report_flow.py  tmp_check.py  tmp_locator_check.py  tmp_ui.xml
.github/workflows/: ci 11.yml  ci.yml
agents/: __init__.py  appium_generator_agent.py  locator_agent.py  navigation_agent.py  reviewer_agent.py  vision_agent.py
agents/core/: __init__.py  appium_agent.py  live_locator_agent.py  testcase_agent.py  vision_agent.py
app/: __init__.py
app/api/: __init__.py  main.py
app/core/: config.py  logging_config.py
app/repositories/: report_repository.py  review_repository.py
app/schemas/: review.py
app/services/: execution_service.py  generation_service.py  langchain_reviewer.py  review_service.py  reviewer_service.py
frontend/: app.py  dashboard.py
models/: __init__.py  ssm.py
pipelines/: appium_script_generator.py  locator_generator.py  ssm_generator.py  testcase_generator.py
prompts/: AppiumScrip_prompt.txt  LocatorAgent_Prompt.txt  Reviewer_Prompt.txt  appium_script_generation.txt  locator_prompt.txt  review_prompt.txt  test_generation.txt  vision_analysis.txt
scripts/: setup_env.ps1  setup_env.sh
services/: appium_agent.py  appium_runtime.py  config.py  live_locator_agent.py  testcase_agent.py
templates/: report.html
tests/: test_appium_agent.py  test_appium_generator_agent.py  test_live_locator_agent.py  test_locator_agent.py  test_ssm_model.py
(+44 files in other folders)
