[project]
name = "mobile-test-automation-generator"
version = "0.1.0"
description = "AI-powered mobile test automation generator"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.5,<3.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
